Provide a meaningful __version__ attribute for imagen using Versioneer (0.9, from pypi).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,5 @@ include setup.py
 recursive-include imagen *.py
 recursive-include numbergen *.py
 
+include versioneer.py
+include imagen/_version.py
