Initial commit of Sphinx documentation and configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,12 @@
 [submodule "dataviews"]
 	path = dataviews
 	url = https://github.com/ioam/dataviews.git
-[submodule "doc/extensions"]
-	path = doc/extensions
-	url = https://github.com/ioam/ioam-builder.git
 [submodule "doc/nbpublisher"]
 	path = doc/nbpublisher
 	url = https://github.com/ioam/ioam-builder.git
 [submodule "doc/reference_data"]
 	path = doc/reference_data
 	url = https://github.com/ioam/ioam.github.com.git
+[submodule "doc/builder"]
+	path = doc/builder
+	url = https://github.com/ioam/ioam-builder.git
